trying to implement test cases, having errors that might relate  to dependncies